[gd_scene load_steps=33 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Music.gd" type="Script" id=5]
[ext_resource path="res://sounds/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/Toby Fox Spider Dance Camellia Remix.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/BTS - Spine-Breaker.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/Itro Tobu - Cloud 9.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/j-hope - Daydream.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/jungkook- 2u.ogg" type="AudioStream" id=11]
[ext_resource path="res://sounds/red army choir - soviet anthem.ogg" type="AudioStream" id=12]
[ext_resource path="res://sounds/Camellia - This track is NOT EPIC.ogg" type="AudioStream" id=13]
[ext_resource path="res://sounds/gameover.wav" type="AudioStream" id=14]
[ext_resource path="res://gui.gd" type="Script" id=15]
[ext_resource path="res://art/gui/left.png" type="Texture" id=16]
[ext_resource path="res://art/gui/left_pressed.png" type="Texture" id=17]
[ext_resource path="res://art/gui/right.png" type="Texture" id=18]
[ext_resource path="res://art/gui/right_pressed.png" type="Texture" id=19]
[ext_resource path="res://art/gui/up.png" type="Texture" id=20]
[ext_resource path="res://art/gui/up_pressed.png" type="Texture" id=21]
[ext_resource path="res://art/gui/down.png" type="Texture" id=22]
[ext_resource path="res://art/gui/down_pressed.png" type="Texture" id=23]
[ext_resource path="res://PauseMenu.gd" type="Script" id=24]
[ext_resource path="res://art/hud/pause.png" type="Texture" id=25]
[ext_resource path="res://art/hud/pause_pressed.png" type="Texture" id=26]
[ext_resource path="res://art/hud/dark_filter.png" type="Texture" id=27]
[ext_resource path="res://art/hud/mute.png" type="Texture" id=28]
[ext_resource path="res://art/hud/unmute.png" type="Texture" id=29]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=30]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.70602, 3.56798, 0, 0, 0, 0, 482.263, 3.26522, 0, 0, 0, 0, 480.489, 729.458, 0, 0, 0, 0, 0.794434, 732.118, 0, 0, 0, 0, 1.97066, 3.83263 )
}

[sub_resource type="DynamicFont" id=2]

size = 48
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 30 )

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -222.0
margin_top = -484.0
margin_right = 1698.0
margin_bottom = 1436.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.253451, 0.425288, 0.429412, 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="MobTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="StartTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 360 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="Node" parent="."]
script = ExtResource( 5 )

[node name="HouseInAForest" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="camelliaSpiderDance" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 7 )
volume_db = -8.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="btsSpineBraker" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="itrotobuCloud9" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="jhopeDaydream" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="jungkook2U" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="redarmychoirSovietAnthem" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="camelliaThisTrackIsNOTEPIC" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
stream_paused = false
mix_target = 0
bus = "Master"

[node name="MobPath" type="Path2D" parent="."]
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 1.70602, 3.56798 )
rotation = -0.000630111
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 240, 360 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="gui" type="CanvasLayer" parent="."]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 0.25, 0.25 )
transform = Transform2D( 0.25, 0, 0, 0.25, 0, 0 )
script = ExtResource( 15 )

[node name="left" type="TouchScreenButton" parent="gui"]
position = Vector2( -1400, 0 )
normal = ExtResource( 16 )
pressed = ExtResource( 17 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_left"
visibility_mode = 0

[node name="right" type="TouchScreenButton" parent="gui"]
position = Vector2( -700, 0 )
normal = ExtResource( 18 )
pressed = ExtResource( 19 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_right"
visibility_mode = 0

[node name="up" type="TouchScreenButton" parent="gui"]
position = Vector2( -1050, -350 )
normal = ExtResource( 20 )
pressed = ExtResource( 21 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_up"
visibility_mode = 0

[node name="down" type="TouchScreenButton" parent="gui"]
position = Vector2( -1050, 0 )
normal = ExtResource( 22 )
pressed = ExtResource( 23 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_down"
visibility_mode = 0

[node name="Pause" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 24 )

[node name="inHUD" type="Node2D" parent="Pause"]
pause_mode = 2

[node name="Pause" type="Button" parent="Pause/inHUD"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="normalTexture" type="TextureRect" parent="Pause/inHUD/Pause"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 9.0
margin_right = 73.0
margin_bottom = 73.0
rect_scale = Vector2( 0.65, 0.65 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 25 )
stretch_mode = 4

[node name="pressedTexture" type="TextureRect" parent="Pause/inHUD/Pause"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 9.0
margin_right = 73.0
margin_bottom = 73.0
rect_scale = Vector2( 0.65, 0.65 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 26 )
stretch_mode = 4

[node name="FilterNode" type="Node2D" parent="Pause"]
pause_mode = 2
visible = false
z_index = 10

[node name="DarkFilter" type="TextureRect" parent="Pause/FilterNode"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -517.0
margin_top = -532.0
margin_right = 1483.0
margin_bottom = 1468.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 27 )
stretch_mode = 0

[node name="Menu" type="Node2D" parent="Pause"]
pause_mode = 2
visible = false
z_index = 20

[node name="SoundmuteButton" type="Button" parent="Pause/Menu"]
pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 390.0
margin_right = 290.0
margin_bottom = 490.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="muteSymbol" type="TextureRect" parent="Pause/Menu/SoundmuteButton"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 18.0
margin_right = 82.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 28 )
stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="unmuteSymbol" type="TextureRect" parent="Pause/Menu/SoundmuteButton"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 18.0
margin_right = 82.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 29 )
stretch_mode = 0
__meta__ = {
"_edit_group_": true
}

[node name="ResumeButton" type="Button" parent="Pause/Menu"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 250.0
margin_right = 390.0
margin_bottom = 350.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
flat = false
align = 1

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="pressed" from="Pause/inHUD/Pause" to="Pause" method="_on_Pause_pressed"]
[connection signal="pressed" from="Pause/Menu/SoundmuteButton" to="Pause" method="_on_SoundmuteButton_pressed"]
[connection signal="pressed" from="Pause/Menu/ResumeButton" to="Pause" method="_on_ResumeButton_pressed"]
